[gd_scene load_steps=7 format=2]

[ext_resource path="res://!KinitoAPI/lense/Lense.png" type="Texture" id=1]
[ext_resource path="res://-Scenes/Application914/Main/XButton.gd" type="Script" id=2]
[ext_resource path="res://-Scenes/Global/Scripts/TABGRAB.gd" type="Script" id=3]
[ext_resource path="res://-Scenes/Global/Scripts/Center.gd" type="Script" id=4]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://!KinitoAPI/lense/OpenSans-VariableFont_wdth,wght.ttf"

[sub_resource type="DynamicFont" id=2]
size = 13
use_mipmaps = true
use_filter = true
font_data = SubResource( 1 )

[node name="Tab" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1920.0
margin_bottom = -1080.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Active" type="Control" parent="."]
margin_right = 600.0
margin_bottom = 430.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Window" type="Control" parent="Active"]
margin_right = 600.0
margin_bottom = 430.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="Active/Window"]
margin_top = 30.0
margin_right = 600.0
margin_bottom = 430.0
color = Color( 1, 1, 1, 0.0588235 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleBar" type="Control" parent="Active/Window"]
margin_right = 600.0
margin_bottom = 30.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="Active/Window/TitleBar"]
margin_right = 600.0
margin_bottom = 30.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lense" type="Sprite" parent="Active/Window/TitleBar"]
position = Vector2( 17, 15 )
scale = Vector2( 0.327, 0.327 )
texture = ExtResource( 1 )

[node name="RichTextLabel" type="Label" parent="Active/Window/TitleBar"]
margin_left = 30.0
margin_top = 0.1
margin_right = 307.0
margin_bottom = 30.1
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0 )
text = "Lense.exe"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Entries" type="Control" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
rect_min_size = Vector2( 40, 40 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Center" type="Control" parent="."]
margin_right = 600.0
margin_bottom = 430.0
mouse_filter = 2
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
tab = 914
multi = 1.0

[node name="WindowButtons" type="Control" parent="."]
margin_left = 436.0
margin_right = 600.0
margin_bottom = 30.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="XButton" type="Control" parent="WindowButtons"]
margin_left = 117.049
margin_right = 164.049
margin_bottom = 30.0
mouse_default_cursor_shape = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="WindowButtons/XButton"]
margin_right = 47.0
margin_bottom = 30.0
mouse_default_cursor_shape = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="WindowButtons/XButton"]
margin_left = 17.0
margin_top = 15.0
margin_right = 27.0
margin_bottom = 16.0
rect_rotation = 45.0
rect_pivot_offset = Vector2( 5, 0.5 )
mouse_default_cursor_shape = 2
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="WindowButtons/XButton"]
margin_left = 17.0
margin_top = 15.0
margin_right = 27.0
margin_bottom = 16.0
rect_rotation = -45.0
rect_pivot_offset = Vector2( 5, 0.5 )
mouse_default_cursor_shape = 2
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Minimise" type="Control" parent="WindowButtons"]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="WindowButtons/Minimise"]
margin_left = 78.5046
margin_right = 118.505
margin_bottom = 30.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabButton" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_right = 468.0
margin_bottom = 30.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
current = 914

[node name="Node" type="Node" parent="."]

[node name="Node2D" type="Node2D" parent="Node"]
position = Vector2( 300, 215 )

[connection signal="gui_input" from="WindowButtons/XButton" to="WindowButtons/XButton" method="_on_XButton_gui_input"]
[connection signal="mouse_entered" from="WindowButtons/XButton" to="WindowButtons/XButton" method="_on_XButton_mouse_entered"]
[connection signal="mouse_exited" from="WindowButtons/XButton" to="WindowButtons/XButton" method="_on_XButton_mouse_exited"]
[connection signal="button_down" from="TabButton" to="TabButton" method="button_down"]
[connection signal="button_up" from="TabButton" to="TabButton" method="button_up"]
